// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography component should render a link w/ gatsby link 1`] = `
<div>
  <a
    class="sc-gtsrHT iBEwGZ"
    href="/"
  >
    <span
      class="sc-bdnxRM cKgBRX"
    >
      Hello Link 🎉
    </span>
  </a>
</div>
`;

exports[`Typography component should render a link w/ href 1`] = `
<div>
  <a
    class="sc-gtsrHT iBEwGZ"
    href="/some-link"
  >
    <span
      class="sc-bdnxRM cKgBRX"
    >
      Hello Link 🎉
    </span>
  </a>
</div>
`;
